// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render an ItemCollection with a breakpoint 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      isListDivided={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 1"
          textStyle={undefined}
        />
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 2"
          textStyle={undefined}
        />
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 3"
          textStyle={undefined}
        />
      </Item>
    </ListView>
  }
  responsiveTo="parent"
  tiny={
    <TableView
      isTablePadded={false}
      isTableStriped={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 1"
          textStyle={undefined}
        />
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 2"
          textStyle={undefined}
        />
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 3"
          textStyle={undefined}
        />
      </Item>
    </TableView>
  }
/>
`;

exports[`should render an ItemCollection with a comment 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      isListDivided={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": true,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={undefined}
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={undefined}
        view="list"
      />
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      isTablePadded={false}
      isTableStriped={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": true,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={undefined}
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={undefined}
        view="list"
      />
    </TableView>
  }
/>
`;

exports[`should render an ItemCollection with a start accessory 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      isListDivided={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": true,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={undefined}
        endAccessory={undefined}
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      />
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      isTablePadded={false}
      isTableStriped={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": true,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={undefined}
        endAccessory={undefined}
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      />
    </TableView>
  }
/>
`;

exports[`should render an ItemCollection with all elements 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      isListDivided={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": true,
          "hasEndAccessory": true,
          "hasStartAccessory": true,
          "numberOfDisplays": 1,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 1"
          textStyle={undefined}
        />
      </Item>
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      isTablePadded={false}
      isTableStriped={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": true,
          "hasEndAccessory": true,
          "hasStartAccessory": true,
          "numberOfDisplays": 1,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 1"
          textStyle={undefined}
        />
      </Item>
    </TableView>
  }
/>
`;

exports[`should render an ItemCollection with an end accessory 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      isListDivided={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": true,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={undefined}
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={undefined}
        view="list"
      />
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      isTablePadded={false}
      isTableStriped={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": true,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={undefined}
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={undefined}
        view="list"
      />
    </TableView>
  }
/>
`;

exports[`should render an ItemCollection with displays 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      isListDivided={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 1,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 1"
          textStyle={undefined}
        />
      </Item>
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      isTablePadded={false}
      isTableStriped={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 1,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 1"
          textStyle={undefined}
        />
      </Item>
    </TableView>
  }
/>
`;

exports[`should render an ItemCollection with list styles 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      isListDivided={true}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 1"
          textStyle={undefined}
        />
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 2"
          textStyle={undefined}
        />
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 3"
          textStyle={undefined}
        />
      </Item>
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      isTablePadded={false}
      isTableStriped={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 1"
          textStyle={undefined}
        />
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 2"
          textStyle={undefined}
        />
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 3"
          textStyle={undefined}
        />
      </Item>
    </TableView>
  }
/>
`;

exports[`should render an ItemCollection with onSelect 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      isListDivided={false}
      onSelect={[Function]}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          icon={undefined}
          isSelectable={true}
          isTruncated={false}
          text="Display 1"
          textStyle={undefined}
        />
      </Item>
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      isTablePadded={false}
      isTableStriped={false}
      onSelect={[Function]}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          icon={undefined}
          isSelectable={true}
          isTruncated={false}
          text="Display 1"
          textStyle={undefined}
        />
      </Item>
    </TableView>
  }
/>
`;

exports[`should render an ItemCollection with table styles 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      isListDivided={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 1"
          textStyle={undefined}
        />
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 2"
          textStyle={undefined}
        />
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 3"
          textStyle={undefined}
        />
      </Item>
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      isTablePadded={true}
      isTableStriped={true}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={
          <ItemComment
            isTruncated={false}
            text="test comment"
          />
        }
        endAccessory={
          <p>
            E
          </p>
        }
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={
          <p>
            S
          </p>
        }
        view="list"
      >
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 1"
          textStyle={undefined}
        />
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 2"
          textStyle={undefined}
        />
        <ItemDisplay
          icon={undefined}
          isTruncated={false}
          text="Display 3"
          textStyle={undefined}
        />
      </Item>
    </TableView>
  }
/>
`;

exports[`should render an default ItemCollection with no elements 1`] = `
<ResponsiveElement
  defaultElement={
    <ListView
      isListDivided={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={undefined}
        endAccessory={undefined}
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={undefined}
        view="list"
      />
    </ListView>
  }
  responsiveTo="parent"
  small={
    <TableView
      isTablePadded={false}
      isTableStriped={false}
      onSelect={undefined}
      requiredElements={
        Object {
          "hasComment": false,
          "hasEndAccessory": false,
          "hasStartAccessory": false,
          "numberOfDisplays": 0,
        }
      }
    >
      <Item
        accessoryAlignment="alignCenter"
        comment={undefined}
        endAccessory={undefined}
        isListItemTruncated={false}
        isSelectable={false}
        isSelected={false}
        listItemLayout="oneColumn"
        listItemTextEmphasis="default"
        reserveStartAccessorySpace={false}
        showListItemChevron={false}
        startAccessory={undefined}
        view="list"
      />
    </TableView>
  }
/>
`;
